DB-7502 Backport DB-7433: run Vacuum in IT and memory improvements